deploy/kind/gateway-base.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: meridian-edge
  namespace: gateway-demo
spec:
  gatewayClassName: meridian-gateway
  listeners:
    - name: axiom-identity-http
      hostname: identity.meridian.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
    - name: axiom-identity-https
      hostname: identity.meridian.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: axiom-identity-tls
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
    - name: axiom-admin-http
      hostname: identity-admin.meridian.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
    - name: axiom-admin-https
      hostname: identity-admin.meridian.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: axiom-admin-tls
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
